--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,31 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Groupe CAP - Paiement</title>
-    <!-- Vos autres fichiers CSS -->
-    <link rel="stylesheet" href="/path/to/styles.css">
+    <title>CAP Recouvrement Chatbot</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Contenu existant de votre site -->
-
-    <!-- Chatbot Bulle -->
+    <div id="chat-icon">
+        <img src="chatbot_avatar.png" alt="Chatbot Avatar" class="avatar">
+    </div>
     <div id="chat-bubble">
         <div id="chat-header">
-            <img src="/path/to/chatbot_avatar.png" alt="Chatbot Avatar" class="avatar">
-            <span>Bonjour, besoin d'aide ?</span>
+            <img src="chatbot_avatar.png" alt="Chatbot Avatar" class="avatar">
+            <div class="header-text-container">
+                <span class="header-text">CAP RECOUVREMENT</span>
+                <span class="status">En ligne</span>
+            </div>
             <button id="close-chat">X</button>
         </div>
         <div id="chat-body">
             <div id="chat-messages"></div>
-            <input type="text" id="user-input" placeholder="Posez votre question...">
-            <button id="send-button">Envoyer</button>
+            <div id="button-container"></div>
         </div>
     </div>
-    <div id="chat-icon">
-        <img src="/path/to/chatbot_avatar.png" alt="Chatbot Avatar" class="avatar">
-    </div>
-
-    <!-- Vos autres fichiers JavaScript -->
-    <script src="/path/to/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
